--- a/client/company/views/post.html
+++ b/client/company/views/post.html
@@ -63,9 +63,13 @@
                     <label class="col-md-1 control-label">Địa điểm:</label>
                     <div class="col-md-3">
                         <select class="form-control select" ng-model="postDetail.address" data-style="btn-success">
-                            <option>Hà Nội</option>
-                            <option>Hồ Chí Minh </option>
+                            <option value="Hà Nội">Hà Nội</option>
+                            <option>Hồ Chí Minh</option>
                             <option>Đà nẵng</option>
+                            <option>Hải Phòng</option>
+                            <option>Thanh Hóa</option>
+                            <option>Hải Dương</option>
+                            <option>Thái Bình</option>
                             <option>Huế</option>
                             <option>Cần thơ</option>
                         </select>
