--- a/client/views/footer/footer.html
+++ b/client/views/footer/footer.html
@@ -9,13 +9,11 @@
     <div class="container" style="padding-bottom: 2em;">
         <div class="col-md-8 footer_grid about">
             <h3>BkConnect</h3>
-			<p>BkConnect là hệ thống cho phép các doanh nghiệp có thể cập nhật các thông tin của công ty, đăng bài tuyển dụng và nhận
-				trực tiếp đơn apply của sinh viên</p>
-			<p>Các sinh viên tham gia vào hệ thống có thể cập nhật thông tin profile và gửi profile cho các nhà tuyển dụng để apply công
-				việc mình mong muốn.</p>
+			<p>BkConnect là hệ thống cho phép các doanh nghiệp có thể cập nhật các thông tin của công ty, đăng bài tuyển dụng và nhận trực tiếp đơn ứng tuyển của sinh viên</p>
+			<p>Các sinh viên tham gia vào hệ thống có thể cập nhật thông tin profile và gửi profile cho các nhà tuyển dụng để ứng tuyển công việc mình mong muốn.</p>
         </div>
         <div class="col-md-4 footer_grid contact">
-            <h3 style="padding-left: 35px;">Contact Info</h3>
+            <h3 style="padding-left: 35px;">Thông tin liên hệ</h3>
             <ul class="address">
                 <li><i class="fa fa-map-marker" aria-hidden="true"></i>Team Lầy - CNTT K59 <span> Đại học Bách Khoa Hà Nội</span></li>
                 <li><i class="fa fa-envelope" aria-hidden="true"></i><a href="bkconnect.huylv@gmail.com">bkconnect.huylv@gmail.com</a></li>
