--- a/client/views/header/index.html
+++ b/client/views/header/index.html
@@ -15,7 +15,7 @@
 					<div class="head-nav">
 						<span class="menu"> </span>
 						<ul class="cl-effect-3">
-							<li class="active">
+							<li>
 								<a ui-sref="home">Trang Chủ</a>
 							</li>
 							<li>
@@ -38,7 +38,7 @@
 						</script>
 						<!-- script-for-nav -->
 					</div>
-					<div class="header-right1" ng-if="user">
+					<div class="header-right1" ng-if="currentUser">
 						<div class="profile_details" class="dropdown profile_details_drop" uib-dropdown>
 
 							<a class="dropdown-toggle" uib-dropdown-toggle data-toggle="dropdown" aria-expanded="true">
@@ -51,23 +51,23 @@
 							<ul class="dropdown-menu drp-mnu" uib-dropdown-menu>
 								<li>
 									<a href="student/profile">
-										<i class="fa fa-cog"></i> Edit Profile</a>
+										<i class="fa fa-cog"></i> Cập nhật thông tin</a>
 								</li>
 
 								<li>
 									<a ng-click="logout()">
-										<i class="fa fa-sign-out"></i> Logout</a>
+										<i class="fa fa-sign-out" ></i> Đăng xuất</a>
 								</li>
 							</ul>
 
 						</div>
 					</div>
-					<div class="header-right2" ng-if="!user">
+					<div class="header-right2" ng-if="!currentUser">
 						<li>
 							<a href="/login">Sinh viên</a>
 						</li>
 						<li>
-							<a onclick="window.location.replace('/company')">Công ty</a>
+							<a onclick="window.location.replace('/company')" >Công ty</a>
 						</li>
 					</div>
 				</div>
