--- a/client/views/home/index.html
+++ b/client/views/home/index.html
@@ -69,14 +69,14 @@
 
 <!--/search_form -->
 <div id="search_form" class="search_top">
-	<h2>Start your job search</h2>
+	<h2>Tìm kiếm cơ hội dành cho bạn</h2>
 	<form action="#" method="post">
-		<input type="text" name="Enter Keyword(s)" placeholder="Enter Keyword(s)" required="">
+		<input type="text" name="Enter Keyword(s)" placeholder="Nhập từ khóa tìm kiếm(s)" required="">
 		<select id="country12" class="frm-field required">
-			<option value="null"> Select Category</option>
-			<option ng-repeat="option in listCareer" value="{{option.idcareer}}">{{option.name}}</option>
+			<option value="null"> Chọn ngành tìm kiếm</option>
+			<option ng-repeat="option in careerGroup" value="{{option.idcareer}}">{{option.name}}</option>
 		</select>
-		<input type="submit" value="Find Jobs">
+		<input type="submit" value="Tìm kiếm">
 		<div class="clearfix"></div>
 	</form>
 </div>
@@ -161,7 +161,10 @@
 								<div ng-if="!authen" class="tab_grid">
 									<strong> Xin lỗi ! Bạn cần đăng nhập để xem tính năng này ! </strong>
 								</div>
-								<div ng-repeat="post in listPostFollow | limitTo :limit" ng-if="authen">
+								<div ng-if="authen && !listPostFollow " class="tab_grid">
+									<strong> Bạn chưa theo dõi công ty nào ! </strong>
+								</div>
+								<div ng-repeat="post in listPostFollow" ng-if="authen">
 									<div class="tab_grid">
 										<div class="col-sm-3 loc_1">
 											<a href="/companies/{{post.idcompany}}">
@@ -246,43 +249,22 @@
 			<div class="col_3 permit" ng-if="authen">
 				<h3>Các công ty follow</h3>
 				<ul class="list_2">
-					<li>
+					<li ng-repeat="company in listComFollow">
 						<div class="friends-grids">
 							<div class="grids-left">
-								<a href="">
-									<img src="views/home/images/banner4.jpg" style="width: 65px; height: 65px;" />
+								<a href="/companies/{{company.idcompany}}">
+									<img ngf-thumbnail="company.logoCom || 'views/home/images/logo1.png'" style="width: 65px; height: 65px;" />
 								</a>
 							</div>
 							<div class="grids-right">
-								<h2>FPT Software</h2>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="friends-grids">
-							<div class="grids-left">
-								<img src="views/home/images/c5.gif" style="width: 65px; height: 65px;" />
-							</div>
-							<div class="grids-right">
-								<h2>Magestore</h2>
-							</div>
-						</div>
-					</li>
-					<li>
-						<div class="friends-grids">
-							<div class="grids-left">
-								<img src="views/home/images/banner1.jpg" style="width: 65px; height: 65px;" />
-							</div>
-							<div class="grids-right">
-								<p></p>
-								<h2>Vina Acecook</h2>
+								<h2>{{company.nameCom}}</h2>
 							</div>
 						</div>
 					</li>
 				</ul>
 			</div>
 			<div class="col_3 permit">
-				<h3>Jobs by Category</h3>
+				<h3>Ngành nghề hỗ trợ</h3>
 				<ul class="list_2">
 					<li ng-repeat="option in listCareer">
 						<a href="#">{{option.name}}</a>
