--- a/client/views/student/css/cv.css
+++ b/client/views/student/css/cv.css
@@ -1,7 +1,3 @@
-h4, h5, h6,
-h1, h2, h3 {margin-top: 0;}
-ul, ol {margin: 0;}
-p {margin: 0;}
 html,body{
 	font-family: 'Open Sans', sans-serif;
   background-color: #F5FDFC;
@@ -15,7 +11,9 @@ body a{
   text-decoration: none;
   color: black;
 }
-
+h1{
+  margin-left: 60px;
+}
 .head-nav {
   float: left;
   width: 50%;
@@ -34,7 +32,7 @@ body a{
   display: inline-block;
   margin: 0px 5px;
   outline: none;
-  padding: 0.5em 0.1em 1.5em;
+  padding: 1em 0.1em 1.1em;
   color: black;
   text-decoration: none;
   letter-spacing: 1px;
@@ -73,8 +71,8 @@ body a{
 	font-weight: 400;
 	font-size: 16px;
 }
-.head-nav ul li a:hover, .head-nav ul li.active a{
-	color: black;
+.head-nav ul li a:hover{
+  color: #00ccff;
   font-weight: bold;
 }
 .fixed-header {
@@ -100,10 +98,58 @@ nav {
   border: solid 3px red;
   border-radius: 100px;
 }
+.permit {
+    background: #FFFFFF;
+    box-shadow: 0 0px 1px rgb(168, 168, 168), 0 1px 2px rgba(0, 0, 0, .24);
+    padding: 1em;    
+    margin-left: 1.5em;
+}
+.grids-left {
+    float: left;
+}
+.permit h3{
+    letter-spacing: 1px;
+    font-weight: 600;
+    text-shadow: 0 1px 2px rgba(0, 0, 0, 0.16);
+    background: #f15f43;
+    font-size: 1.2em;
+    color: #fff;
+    padding: 10px;
+}
+.permit li {
+    font-size: 0.9em;
+    line-height: 2em;
+    color: #666;
+    list-style: none;
+}
+.friends-grids {
+    padding: 1% 3% 4% 2%;
+    background: snow;
+    cursor: pointer;
+    border-bottom: solid 1px grey;
+    height: 80px;
+}
+.grids-left img {
+    padding-top: 3px;
+    border-radius: 50px;
+}
+.grids-right h2 {
+    text-align: left;
+    color: black;
+    width: 55%;
+    margin: 0 auto;
+    padding: 0.8em 0.5em;
+    font-size: 1em;
+    font-weight: 600;
+}
+ul {
+    margin: 0;
+    padding: 0;
+}
 .information-left{
   margin-left: 30px;
   padding: 10px;
-  background-color: #fff;
+  padding-bottom: 30px;
   text-decoration: none;
 }
 .information{
@@ -162,39 +208,6 @@ nav {
 .footer-top {
   background: #222222; 
   padding: 2em 0;
-}
-.footer-top p {
-  color: #eeeeee;
-  font-size: 1em;
-  font-weight: 400;
-  line-height: 1.5em;
-  margin: 1em 0;
-}
-.footer-top h6 {
-  color: #ffffff;
-  font-size: 1em;
-  font-weight: 700;
-  margin: 0;
-}
-.footer-top h3 {
-  color: #ffffff;
-  font-size: 1.5em;
-  font-weight: 700;
-  margin: 1em 0;
-}
-.footer-top li {
-  display: block;
-  line-height: 1em;
-}
-.footer-top ul {
-  padding: 0;
-}
-.footer-top li a {
-  color: #6d7a83;
-  font-size: 1em;
-}
-.footer-top li a:hover{
-  color: #42E4d8;
 }
 .logo {
   float: left;
