--- a/client/views/student/login.html
+++ b/client/views/student/login.html
@@ -81,7 +81,7 @@
         <div class="inner_sec_grids_info_w3ls">
             <div class="signin-form">
                 <div class="login-form-rec">
-                    <form name="registerForm" ng-submit="register()" autocomplete="on">
+                    <form name="registerForm" ng-submit="register()" >
                         <input id="usernamesignup" ng-model="student.name" name="name" required="required" type="text" placeholder="Bạn tên là gì nhỉ ?"
                         />
                         <input id="emailsignup" type="email" name="emailsignup" ng-model="student.email" ng-required=true ng-pattern="/[\d]+@student\.hust\.edu\.vn$/"
