--- a/client/admin/views/home.html
+++ b/client/admin/views/home.html
@@ -26,7 +26,7 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body" loading-pane="isPaneShown">
-              <table id="example1" class="table table-bordered table-hover">
+              <table datatable="ng" class="table table-bordered table-hover">
                 <thead>
                   <tr>
                     <th>#</th>
@@ -39,7 +39,7 @@
                 </thead>
 
                 <tbody>
-                  <tr ng-repeat="n in listCompany" repeat-done="initDataTable()">
+                  <tr ng-repeat="n in listCompany" >
                     <td>{{$index+1}}</td>
                     <td>{{n.name}}</td>
                     <td>{{n.email}}</td>
