--- a/client/admin/views/student-block.html
+++ b/client/admin/views/student-block.html
@@ -24,8 +24,8 @@
                     <h3 class="box-title">Danh sách sinh viên bị khóa tài khoản</h3>
                 </div>
                 <!-- /.box-header -->
-                <div class="box-body" loading-pane="isPaneShown">
-                    <table id="example1" class="table table-bordered table-hover">
+                <div  loading-pane="isPaneShown">
+                    <table datatable="ng" class="table table-bordered table-hover">
                         <thead>
                             <tr>
                                 <th>#</th>
@@ -38,7 +38,7 @@
                         </thead>
 
                         <tbody>
-                            <tr ng-repeat="n in listStudent" repeat-done="initDataTable()">
+                            <tr ng-repeat="n in listStudent">
                                 <td>{{$index+1}}</td>
                                 <td>{{n.name}}</td>
                                 <td>{{n.email}}</td>
