--- a/client/views/home/index.html
+++ b/client/views/home/index.html
@@ -28,7 +28,7 @@
 					</h3>
 					<p>Hire. Train. Retain.</p>
 					<div class="agileits-button top_ban_agile">
-						<a class="btn btn-primary btn-lg" href="single.html">Read More »</a>
+						<a class="btn btn-primary btn-lg" href="/contact">Read More »</a>
 					</div>
 				</div>
 			</div>
